<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_add_client"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="cs.b07.cscb07courseproject.AddClient">

    <TextView
        android:text="@string/addclient_header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/addclient_header"
        android:textAppearance="@android:style/TextAppearance.DeviceDefault.Large"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/addclient_header">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >



            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress"
                android:ems="10"
                android:id="@+id/addclient_email"
                android:hint="@string/register_email" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:ems="10"
                android:id="@+id/addclient_password"
                android:hint="@string/register_password" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:ems="10"
                android:id="@+id/addclient_confirm_pass"
                android:hint="@string/register_confirm_pass" />


            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPersonName"
                android:ems="10"
                android:id="@+id/addclient_firstname"
                android:hint="@string/register_firstname" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPersonName"
                android:ems="10"
                android:id="@+id/addclient_lastname"
                android:hint="@string/register_lastname" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPostalAddress"
                android:ems="10"
                android:id="@+id/addclient_address"
                android:hint="@string/register_address" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPersonName"
                android:ems="10"
                android:id="@+id/addclient_creditcard"
                android:hint="@string/register_creditcard" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="date"
                android:ems="10"
                android:id="@+id/addclient_expirydate"
                android:hint="@string/register_expirydate" />

            <Button
                android:text="@string/register_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/addclient_button"
                android:onClick="addClient"/>

            <TextView
                android:text="@string/addflight_fromfile"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/addclient_fromfile_txtview"
                android:textAppearance="@android:style/TextAppearance" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPersonName"
                android:ems="10"
                android:id="@+id/addclient_path"
                android:hint="@string/addflight_path" />

            <Button
                android:text="@string/addclient_fromfile"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/addclient_filebtn"
                android:onClick="addClientFromFile" />

        </LinearLayout>
    </ScrollView>
</RelativeLayout>
