<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_flight"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="cs.b07.cscb07courseproject.Flight">

    <TextView
        android:text="@string/flight_header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:id="@+id/flight_header"
        android:textAppearance="@android:style/TextAppearance.DeviceDefault.Large" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/flight_header">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:text="@string/flight_airline"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:id="@+id/flight_airlinetxt"
                    android:layout_weight="1"
                    android:textAppearance="@android:style/TextAppearance.DeviceDefault.Medium" />

                <EditText
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:inputType="textPersonName"
                    android:ems="10"
                    android:id="@+id/flight_airline"
                    android:hint="@string/addfilght_airline"
                    android:layout_weight="1" />

            </LinearLayout>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1">

                <TextView
                    android:text="@string/flight_num"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:id="@+id/textView3"
                    android:layout_weight="1"
                    android:textAppearance="@android:style/TextAppearance.DeviceDefault.Medium" />

                <EditText
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:focusable="false"
                    android:background="#1111"
                    android:ems="10"
                    android:id="@+id/flight_num"
                    android:hint="@string/addflight_flightnum"
                    android:layout_weight="1" />
            </LinearLayout>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:text="@string/flight_cost"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:id="@+id/textView4"
                    android:layout_weight="1"
                    android:textAppearance="@android:style/TextAppearance.DeviceDefault.Medium" />

                <EditText
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:inputType="numberDecimal"
                    android:ems="10"
                    android:id="@+id/flight_cost"
                    android:hint="@string/addflight_cost"
                    android:layout_weight="1" />
            </LinearLayout>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:text="@string/flight_departdate"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:id="@+id/textView5"
                    android:layout_weight="1"
                    android:textAppearance="@android:style/TextAppearance.DeviceDefault.Medium" />

                <EditText
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:inputType="textPersonName"
                    android:ems="10"
                    android:id="@+id/flight_departdate"
                    android:hint="@string/addflight_departdate"
                    android:layout_weight="1" />
            </LinearLayout>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:text="@string/flight_arivaldate"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:id="@+id/textView6"
                    android:layout_weight="1"
                    android:textAppearance="@android:style/TextAppearance.DeviceDefault.Medium" />

                <EditText
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:inputType="textPersonName"
                    android:ems="10"
                    android:id="@+id/flight_arivaldate"
                    android:hint="@string/addflight_arivaldate"
                    android:layout_weight="1" />
            </LinearLayout>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:text="@string/flight_origin"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:id="@+id/textView8"
                    android:layout_weight="1"
                    android:textAppearance="@android:style/TextAppearance.DeviceDefault.Medium" />

                <EditText
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:inputType="textPersonName"
                    android:ems="10"
                    android:id="@+id/flight_origin"
                    android:hint="@string/addflight_origin"
                    android:layout_weight="1" />
            </LinearLayout>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:text="@string/flight_destination"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:id="@+id/textView9"
                    android:layout_weight="1"
                    android:textAppearance="@android:style/TextAppearance.DeviceDefault.Medium" />

                <EditText
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:inputType="textPersonName"
                    android:ems="10"
                    android:id="@+id/flight_destination"
                    android:hint="@string/addflight_destination"
                    android:layout_weight="1" />
            </LinearLayout>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:text="@string/flight_numseats"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:id="@+id/textView10"
                    android:layout_weight="1"
                    android:textAppearance="@android:style/TextAppearance.DeviceDefault.Medium" />

                <EditText
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:inputType="textPersonName"
                    android:ems="10"
                    android:id="@+id/flight_numseats"
                    android:hint="@string/addflight_numseats"
                    android:layout_weight="1" />
            </LinearLayout>

            <Button
                android:text="@string/flight_updatebtn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/flight_updatebtn"
                android:onClick="updateFlight" />
        </LinearLayout>
    </ScrollView>
</RelativeLayout>
