<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_itinerary_results"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="cs.b07.cscb07courseproject.ItineraryResults">

    <ListView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/itineraryresults_header"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:id="@+id/itineraryresults_listview"
        android:layout_above="@+id/itineraryresults_sortbytimebtn" />

    <TextView
        android:text="@string/itineraryresults_header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:id="@+id/itineraryresults_header"
        android:textAppearance="@android:style/TextAppearance.DeviceDefault.Medium" />

    <Button
        android:text="@string/itineraryresults_sortbytimebtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:id="@+id/itineraryresults_sortbytimebtn"
        android:onClick="sortByTime" />

    <Button
        android:text="@string/itineraryresults_sortbycostbtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:id="@+id/itineraryresults_sortbycostbtn"
        android:onClick="sortByCost" />

</RelativeLayout>
